OPENJPA-230. Updated patch based on an out-of-band patch from Vishal. This version avoids interrupts while still handling guaranteed delivery of messages in the queue.
git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/openjpa/trunk@537221 13f79535-47bb-0310-9956-ffa450edef68